--- a/android/src/main/res/layout/fb_native_ad_layout_vertical.xml
+++ b/android/src/main/res/layout/fb_native_ad_layout_vertical.xml
@@ -1,109 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/native_ad_main"
+<com.facebook.ads.NativeAdLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/native_ad_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@android:color/black">
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <com.facebook.ads.MediaView
-            android:id="@+id/native_ad_media"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-        <LinearLayout
-            android:id="@+id/native_ad_option"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:padding="2dp"
-            android:background="#44000000"
-            android:orientation="horizontal">
-        </LinearLayout>
-    </FrameLayout>
-
+    android:orientation="vertical">
     <LinearLayout
+        android:id="@+id/native_ad_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:paddingTop="5dp"
-        android:paddingBottom="16dp"
-        android:orientation="vertical">
+        android:paddingBottom="5dp"
+        android:orientation="horizontal"
+        android:background="@android:color/black">
+
+        <androidx.cardview.widget.CardView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            app:cardCornerRadius="13dp">
+            <com.facebook.ads.MediaView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/native_ad_icon"/>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:paddingLeft="10dp"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/native_ad_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:textSize="14dp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal">
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/native_ad_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:textSize="15dp"
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/native_ad_sponsored_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:includeFontPadding="false"
-                        android:textSize="11dp"
-                        android:textStyle="normal"
-                        android:textColor="#9ba1b4" />
+                        android:maxLines="1"
+                        android:textSize="12dp"
+                        android:textStyle="normal"/>
                 </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
 
-        <TextView
-            android:id="@+id/native_ad_body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="false"
-            android:maxLines="4"
-            android:textColor="@android:color/white"
-            android:textSize="12dp"
-            android:textStyle="normal"/>
+                <LinearLayout
+                    android:id="@+id/native_ad_choices"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal" />
+            </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/native_ad_call_to_action"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:textColor="@android:color/black">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1">
+
+                <com.facebook.ads.MediaView
+                    android:id="@+id/native_ad_media"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+
+            <RelativeLayout
+                android:id="@+id/native_ad_call_to_action"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@color/cardview_shadow_start_color"
+                android:padding="1dp" >
+
+                <TextView
+                    android:id="@+id/native_ad_button_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:maxLines="1"
+                    android:textSize="14dp"
+                    android:textStyle="normal"
+                    android:includeFontPadding="false" />
+
+                <ImageView
+                    android:src="@drawable/ic_baseline_navigate_next_24"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/native_ad_button_text"
-                android:layout_width="wrap_content"
+                android:id="@+id/native_ad_body"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:includeFontPadding="false"
-                android:maxLines="1"
-                android:textColor="#000000"
-                android:textSize="12dp"
+                android:maxLines="2"
+                android:textColor="@android:color/white"
+                android:textSize="14dp"
                 android:textStyle="normal" />
+
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</com.facebook.ads.NativeAdLayout>
