--- a/android/src/main/res/layout/fb_native_ad_layout_vertical.xml
+++ b/android/src/main/res/layout/fb_native_ad_layout_vertical.xml
@@ -39,15 +39,15 @@
             android:paddingLeft="10dp"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
@@ -73,46 +73,44 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal" />
-            </RelativeLayout>
+            </LinearLayout>
 
-            <FrameLayout
+            <com.facebook.ads.MediaView
+                android:id="@+id/native_ad_media"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1">
-
-                <com.facebook.ads.MediaView
-                    android:id="@+id/native_ad_media"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </FrameLayout>
+                android:layout_marginTop="7dp"/>
 
             <RelativeLayout
                 android:id="@+id/native_ad_call_to_action"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:background="@color/cardview_shadow_start_color"
-                android:padding="1dp" >
+                android:layout_height="37dp"
+                android:paddingBottom="0.5dp">
 
-                <TextView
-                    android:id="@+id/native_ad_button_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:maxLines="1"
-                    android:textSize="14dp"
-                    android:textStyle="normal"
-                    android:includeFontPadding="false" />
+                <RelativeLayout
+                    android:id="@+id/native_ad_call_to_action_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:src="@drawable/ic_baseline_navigate_next_24"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
+                    <TextView
+                        android:id="@+id/native_ad_button_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:maxLines="1"
+                        android:textSize="14dp"
+                        android:textStyle="normal" />
+
+                    <ImageView
+                        android:src="@drawable/ic_baseline_navigate_next_24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true" />
+                </RelativeLayout>
             </RelativeLayout>
 
             <TextView
